add default values and render static content
