# server/data/request/UpdateCollectionRequest.go
@@ -1,0 +1,5 @@
+package request
+
+type UpdateCollectionRequest struct {
+	Id uint
+}
