# server/docs/swagger.json
@@ -115,6 +115,32 @@
                         "description": "Created"
                     }
                 }
+            },
+            "patch": {
+                "description": "Редактирует информацию о коллекции на сервере.",
+                "produces": [
+                    "aplication/json"
+                ],
+                "tags": [
+                    "collection"
+                ],
+                "summary": "Редактирует коллекцию.",
+                "parameters": [
+                    {
+                        "description": "Параметры создания коллекции",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateCollectionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
             }
         },
         "/collection/{id}": {
@@ -167,6 +193,14 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "request.UpdateCollectionRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
