# server/routes/collectionRoutes.go
@@ -8,8 +8,8 @@ func AddCollectionRoutes(routeGroup fiber.Router) {
 	collection := routeGroup.Group("/collection")
 	collection.Get("/", getCollections)
 	collection.Post("/", createCollection)
-	collection.Get("/{id}", getCollectionById)
-	collection.Patch("/{id}", updateCollection)
+	collection.Get("/:id", getCollectionById)
+	collection.Patch("/:id", updateCollection) 
 }
 
 // getCollections godoc
@@ -27,15 +27,11 @@ func getCollections(c *fiber.Ctx) error {
 // @summary Возвращает коллекцию на сервере.
 // @description Возвращает коллекцию на сервере, по id.
 // @tags collection
-// @Param        id   path      int  true  "Идентификатор коллекции"
+// @Param id path int true "Идентификатор коллекции"
 // @produce aplication/json
 // @success 200 {object} response.GetCollectionResponse
 // @Router /collection/{id} [get]
 func getCollectionById(c *fiber.Ctx) error {
-	return nil
-}
-
-func findCollection(c *fiber.Ctx) error {
 	return nil
 }
 
@@ -51,7 +47,14 @@ func createCollection(c *fiber.Ctx) error {
 	return nil
 }
 
-
+// updateCollection godoc
+// @summary Редактирует коллекцию.
+// @description Редактирует информацию о коллекции на сервере.
+// @tags collection
+// @param request body request.UpdateCollectionRequest true "Параметры создания коллекции"
+// @produce aplication/json
+// @success 200
+// @Router /collection/ [patch]
 func updateCollection(c *fiber.Ctx) error {
 	return nil
 }
